--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -51,7 +51,7 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: sigstore/cosign-installer@v3.4.0
         with:
-          cosign-release: "v2.1.1"
+          cosign-release: 'v1.13.1'
 
       # Set up BuildKit Docker container builder to be able to build
       # multi-platform images and export cache
